# delta-command-api

./: .gitignore  Cargo.toml  documentation.md  idea  readme.md  rust-toolchain
deltachat_command_derive/: Cargo.toml
deltachat_command_derive/src/: lib.rs
examples/: webserver.rs  ws.rs
src/: chatlistitem.rs  commands.rs  error.rs  lib.rs  message.rs
src/account/: account.rs  chat.rs  chatlistitem.rs  message.rs  mod.rs  util.rs
src/deltachat/: account.rs  chatlistitem.rs  message.rs
typescript/: browser-example.html  package-lock.json  package.json  tsconfig.json  websocket-example.js
typescript/src/: deltachat.ts  index.ts  transportFormat.ts  transportMethod.ts  typings.d.ts
typescript/src/deltachat/: chatList.ts  constants.ts  events.ts
