[package]
name = "delta-command-api"
version = "0.1.0"
authors = ["simon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
tungstenite = { version = "0.9.2", default-features = false }

syn = "1.0.17" # fix version conflict
deltachat = { git = "https://github.com/deltachat/deltachat-core-rust", rev = "3a25d6b" }
deltachat_command_derive = { path = "./deltachat_command_derive" }

[workspace]
members = [
  "deltachat_command_derive",
]